--- a/client/src/styles/index.css
+++ b/client/src/styles/index.css
@@ -1,3 +1,6 @@
+/* TODO: сделать кнопки нормально */
+
+
 * {
   margin: 0;
   padding: 0;
@@ -71,6 +74,9 @@ body {
   padding: 3px;
   text-decoration: none;
   color: black;
+  font-family: "Montserrat";
+  font-style: normal;
+  font-weight: 300;
 }
 .btn:hover {
   cursor: pointer;
@@ -138,4 +144,15 @@ body {
 
 .link {
   text-decoration: none;
+}
+
+.form_container {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.form_container > * {
+  margin-bottom: 10px;
 }
