--- a/client/src/styles/index.sass
+++ b/client/src/styles/index.sass
@@ -62,7 +62,7 @@ body
             font: 500 1.25rem "Montserrat"
 
         &__text
-            font-size: 1rem
+            font: 300 1.25rem "Montserrat"
 
 %increasing-border
     box-shadow: inset 0 0 0 1px $accentColor
@@ -111,13 +111,14 @@ body
         width: 80%
         outline: none
 
+    // FIXME: багулина тут с width
     &__input
         width: 480px
         border: 1px solid #bcbcbc
         border-radius: 5px
         border-box: box-sizing
-        font: normal 300 "Montserrat" serif
-        transition: box-shadow 0.5s cubic-bezier(0.65, 0, 0.35, 1)
+        font: 300 1rem "Montserrat"
+        transition: box-shadow border-color 0.5s cubic-bezier(0.65, 0, 0.35, 1)
 
         &:hover
             border-color: $accentColor
@@ -125,6 +126,9 @@ body
         &:focus
             @extend %increasing-border
             outline: none
+
+        &_error
+            border: 1px solid red
 
     &__title-container
         width: 100%
