--- a/client/src/styles/index.sass
+++ b/client/src/styles/index.sass
@@ -51,11 +51,18 @@ body
         padding: 5px
         border: 1px solid transparent
         color: black
+        transition: all .5s ease-out
 
         &:hover
             border: 1px solid $secondColor
             border-radius: 5px
             cursor: pointer
+
+        &:hover &__btn-delete
+            border-color: red
+
+            &__svg
+                fill: red
 
         &__title
             color: $mainColor
@@ -63,6 +70,21 @@ body
 
         &__text
             font: 300 1.25rem "Montserrat"
+
+        &__btn-delete
+            display: flex
+            justify-content: center
+            align-content: center
+            margin-left: auto
+            padding: 5px
+            border: 1px solid transparent
+            border-radius: 5px
+            background-color: #fff
+            cursor: pointer
+            transition: all .5s ease-out
+
+            &__svg
+                fill: transparent
 
 %increasing-border
     box-shadow: inset 0 0 0 1px $accentColor
@@ -91,7 +113,6 @@ body
     width: 15px
     height: 15px
     margin-right: 10px
-    border: 1px solid #94d4d8
     cursor: pointer
 
 .todo-editor
