--- a/client/src/styles/index.sass
+++ b/client/src/styles/index.sass
@@ -29,11 +29,19 @@ html
 body
     font: normal 300 1rem "Montserrat"
 
+button
+    font: normal 300 1rem "Montserrat"
+
 .wrapper
+    box-sizing: border-box
     width: 80%
     max-width: 1400px
     margin: 0 auto
     padding-top: 5px
+
+    @media (max-width: 375px)
+        width: 100%
+        padding: 3px
 
 .todo-list
     width: 100%
@@ -69,6 +77,7 @@ body
             font: 500 1.25rem "Montserrat"
 
         &__text
+            color: $thirdColor
             font: 300 1.25rem "Montserrat"
 
         &__btn-delete
@@ -86,21 +95,25 @@ body
             &__svg
                 fill: transparent
 
+        &__container:hover .todo-list__item__title
+            color: darken($mainColor, 15%)
+
+        &__container:hover .todo-list__item__text
+            color: darken($thirdColor, 20%)
+
 %increasing-border
     box-shadow: inset 0 0 0 1px $accentColor
 
 .btn
     display: block
-    width: 20%
+    width: 30%
     margin: 5px auto
     padding: 3px
     border: 1px solid $accentColor
     border-radius: 5px
-    border-box: box-sizing
     text-align: center
     background-color: #fff
     color: black
-    font: normal 300 1rem "Montserrat"
     text-decoration: none
     caret-color: transparent
     transition: box-shadow 0.5s
@@ -108,6 +121,11 @@ body
     &:hover
         cursor: pointer
         @extend %increasing-border
+
+    @media ( max-width: 425px )
+        width: 80%
+    @media ( max-width: 1024px )
+        width: 60%
 
 .checkbox
     width: 15px
@@ -129,17 +147,22 @@ body
         margin-bottom: 10px
 
     &__form
-        width: 80%
+        display: flex
+        flex-direction: column
+        align-items: center
+        width: 100%
         outline: none
 
-    // FIXME: багулина тут с width
     &__input
-        width: 480px
+        width: 80%
         border: 1px solid #bcbcbc
         border-radius: 5px
         border-box: box-sizing
         font: 300 1rem "Montserrat"
         transition: box-shadow border-color 0.5s cubic-bezier(0.65, 0, 0.35, 1)
+
+        @media (max-width: 425px)
+            width: 100%
 
         &:hover
             border-color: $accentColor
@@ -155,7 +178,9 @@ body
         width: 100%
 
         &__input
+            display: block
             height: 25px
+            margin: 0 auto
 
         &__error-field
             color: transparent
@@ -166,6 +191,7 @@ body
 
     &__text
         height: 500px
+        margin-bottom: 5px
         resize: vertical
 
     &__input-container
