Fix bug with todo deletion and added loader for todo deletion

--- a/client/src/styles/index.sass
+++ b/client/src/styles/index.sass
@@ -116,6 +116,9 @@ a
         &__container:hover .todo-list__item__text
             color: darken($thirdColor, 20%)
 
+        &__loader
+            margin-left: auto
+
 %increasing-border
     box-shadow: inset 0 0 0 1px $accentColor
 
@@ -220,4 +223,3 @@ a
 
         & > *
             margin-bottom: 10px
-
