Changed webpack configs and index.sass styles.

--- a/client/src/styles/index.sass
+++ b/client/src/styles/index.sass
@@ -67,6 +67,8 @@ a
         margin-bottom: 10px
         padding: 5px
         border: 1px solid transparent
+        border-radius: 20px
+        box-shadow: 5px 5px 12px rgb(0 0 0 / 8%)
         color: black
         transition: all .5s ease-out
 
