--- a/client/src/styles/index.sass
+++ b/client/src/styles/index.sass
@@ -53,6 +53,9 @@ a
         padding: 3px
 
 .todo-list
+    display: flex
+    flex-direction: column
+    align-items: center
     width: 100%
     height: 90vh
     overflow-y: scroll
