--- a/client/src/styles/index.sass
+++ b/client/src/styles/index.sass
@@ -48,7 +48,7 @@ a
         align-items: center
         height: 100vh
 
-    @media (max-width: 375px)
+    @media (max-width: 600px)
         width: 100%
         padding: 3px
 
@@ -65,7 +65,8 @@ a
         justify-content: flex-start
         align-items: center
         flex-wrap: nowrap
-        width: 80%
+        width: 90%
+        max-width: 800px
         height: 65px
         margin-bottom: 10px
         padding: 5px
@@ -76,8 +77,7 @@ a
         transition: all .5s ease-out
 
         &:hover
-            border: 1px solid $secondColor
-            border-radius: 5px
+            box-shadow: 5px 5px 12px rgb(0 0 0 / 16%)
             cursor: pointer
 
         &:hover &__btn-delete
@@ -130,24 +130,28 @@ a
 .btn
     display: block
     width: 30%
+    max-width: 500px
     margin: 5px auto
-    padding: 3px
-    border: 1px solid $accentColor
-    border-radius: 5px
+    padding: 7px
+    border: none
+    border-radius: 20px
+    box-shadow: 0 0 20px 0px #495aff94
+    font: 500 1.15rem "Montserrat"
     text-align: center
-    background-color: #fff
-    color: black
+    background-image: linear-gradient(to right, #0acffe 0%, #495aff 100%)
+    color: white
     text-decoration: none
     caret-color: transparent
-    transition: box-shadow 0.5s
+    transition: background-image 0.5s
 
     &:hover
         cursor: pointer
-        @extend %increasing-border
+        box-shadow: 0 0 20px 0px #495affd1
 
     @media ( max-width: 425px )
         width: 80%
-    @media ( max-width: 1024px )
+        padding: 5px
+    @media ( min-width: 768px )
         width: 60%
 
 .checkbox
@@ -173,6 +177,7 @@ a
         display: flex
         flex-direction: column
         align-items: center
+        margin-top: 10px 
         width: 100%
         outline: none
 
@@ -180,18 +185,16 @@ a
         width: 80%
         border: 1px solid #bcbcbc
         border-radius: 5px
-        border-box: box-sizing
         font: 300 1rem "Montserrat"
-        transition: box-shadow border-color 0.5s cubic-bezier(0.65, 0, 0.35, 1)
 
         @media (max-width: 425px)
-            width: 100%
+            width: 95%
 
-        &:hover
-            border-color: $accentColor
+        @media (min-width: 768px)
+            padding: 5px
 
         &:focus
-            @extend %increasing-border
+            border: 1px solid #23a1ff
             outline: none
 
         &_error
@@ -217,7 +220,7 @@ a
 
     &__text
         height: 500px
-        margin-bottom: 5px
+        margin-bottom: 10px
         resize: vertical
 
     &__input-container
