Added some basic style for deadlines

--- a/client/src/styles/index.sass
+++ b/client/src/styles/index.sass
@@ -87,12 +87,18 @@ a
                 fill: red
 
         &__title
-            color: $mainColor
+            display: flex
+            align-items: baseline
+            color: #0075ff
             font: 500 1.25rem "Montserrat"
 
         &__text
-            color: $thirdColor
+            color: #595959
             font: 300 1.25rem "Montserrat"
+
+        &__time-input
+            font-size: 1rem
+            color: #485cff
 
         &__btn-delete
             display: flex
@@ -231,3 +237,9 @@ a
 
         & > *
             margin-bottom: 10px
+
+.svg-icon
+    padding-left: 5px
+    width: 16px
+    height: 16px
+    padding: 0px 3px 0px 10px
