Fix todo displaying

--- a/client/src/styles/index.sass
+++ b/client/src/styles/index.sass
@@ -122,10 +122,10 @@ a
                     fill: #fff
 
         &__container:hover .todo-list__item__title
-            color: darken($mainColor, 15%)
+            color: darken(#0075ff, 15%)
 
         &__container:hover .todo-list__item__text
-            color: darken($thirdColor, 20%)
+            color: darken(#595959, 15%)
 
         &__loader
             margin-left: auto
