Make some little changes.

--- a/client/src/styles/index.sass
+++ b/client/src/styles/index.sass
@@ -150,6 +150,7 @@ a
     &:hover
         cursor: pointer
         box-shadow: 0 0 20px 0px #495affd1
+        color: white
 
     @media ( max-width: 425px )
         width: 80%
@@ -236,6 +237,7 @@ a
             margin-bottom: 10px
 
 .svg-icon
+    box-sizing: content-box
     padding-left: 5px
     width: 16px
     height: 16px
