--- a/client/src/styles/index.sass
+++ b/client/src/styles/index.sass
@@ -132,6 +132,7 @@ a
 
 .btn
     display: block
+    height: 35px
     width: 30%
     max-width: 500px
     margin: 5px auto
@@ -165,28 +166,26 @@ a
     cursor: pointer
 
 .todo-editor
-    display: flex
-    flex-direction: column
-    align-items: center
+    height: 95vh
 
     @media (min-width: 600px)
         width: 80%
         max-width: 600px
         margin: 0 auto
 
-    & > *
-        margin-bottom: 10px
-
     &__form
-        display: flex
-        flex-direction: column
+        display: grid
+        grid-template-columns: 1fr
+        grid-template-rows: 1fr 30px 1fr 1fr 30px 7fr 1fr
+        grid-gap: 5px
         align-items: center
-        margin-top: 10px
+        height: 100%
         width: 100%
         outline: none
 
     &__input
         width: 80%
+        height: 50%
         border: 1px solid #bcbcbc
         border-radius: 5px
         font: 300 1rem "Montserrat"
@@ -209,11 +208,7 @@ a
         flex-direction: column
         align-items: center
         width: 100%
-
-        &__input
-            display: block
-            height: 25px
-            margin: 0 auto
+        height: 100%
 
         &__error-field
             color: transparent
@@ -223,8 +218,8 @@ a
                 color: red
 
     &__text
-        height: 500px
-        margin-bottom: 10px
+        height: 100%
+        margin: 0 auto
         resize: vertical
 
     &__input-container
@@ -242,3 +237,9 @@ a
     width: 16px
     height: 16px
     padding: 0px 3px 0px 10px
+
+.textarea
+    height: 100%
+
+.checkbox
+    width: auto
