--- a/client/src/styles/index.sass
+++ b/client/src/styles/index.sass
@@ -233,13 +233,15 @@ a
 
 .svg-icon
     box-sizing: content-box
-    padding-left: 5px
     width: 16px
     height: 16px
-    padding: 0px 3px 0px 10px
+    padding-right: 5px
 
 .textarea
     height: 100%
 
 .checkbox
     width: auto
+
+.tag
+    margin-left: 10px
