Added sorting functionality.

--- a/client/src/styles/index.sass
+++ b/client/src/styles/index.sass
@@ -257,6 +257,7 @@ label>h1
     display: flex
     align-items: center
     margin-bottom: 0.5em
+    caret-color: transparent
 
     &__order-button
         width: 1em
