--- a/client/src/styles/index.sass
+++ b/client/src/styles/index.sass
@@ -4,6 +4,7 @@ $thirdColor: #e48900
 $accentColor: #be0000
 
 $btn-delete-color: #cc0f35
+$main-gradient: linear-gradient(to right, #0acffe 0%, #495aff 100%)
 
 @font-face
     font-family: "Montserrat"
@@ -139,6 +140,50 @@ label>h1
         &>checkbox
             width: 1.1em
             height: 1.1em
+
+    &__button-section
+        display: grid
+        grid-template-columns: 1fr 3fr 1fr
+        align-items: center
+
+        &__button
+            display: flex
+            justify-content: center
+            align-items: center
+            width: 45px
+            height: 40px
+            border: none
+            border-radius: 0
+            text-align: center
+            font: 500 1.1rem "Montserrat"
+            color: white
+            caret-color: transparent
+
+            &:hover
+                color: white
+
+            &_left
+                justify-self: end
+                background-color: #0bcffe
+                border-radius: 25px 0px 0px 25px
+
+                &:hover
+                    box-shadow: -3px 0px salmon
+
+            &_right
+                justify-self: start
+                background-color: #495aff
+                border-radius: 0px 25px 25px 0px
+
+                &:hover
+                    box-shadow: 3px 0px salmon
+
+        &__main-button
+            width: 100%
+            background-image: $main-gradient
+
+            &:hover
+                box-shadow: 0px 3px salmon
 
 .btn
     display: block
