--- a/client/src/styles/index.sass
+++ b/client/src/styles/index.sass
@@ -142,6 +142,8 @@ label>h1
             height: 1.1em
 
     &__button-section
+        max-width: 400px
+        margin: 0 auto
         display: grid
         grid-template-columns: 1fr 3fr 1fr
         align-items: center
