--- a/client/src/styles/index.sass
+++ b/client/src/styles/index.sass
@@ -6,6 +6,8 @@ $accentColor: #be0000
 $btn-delete-color: #cc0f35
 $main-gradient: linear-gradient(to right, #0acffe 0%, #495aff 100%)
 
+$mobile-L: 425px
+
 @font-face
     font-family: "Montserrat"
     src: url(./Montserrat-Medium.ttf)
@@ -65,11 +67,11 @@ label>h1
 
     &__item
         display: grid
-        grid-template-columns: 30px 6fr 2fr 30px
+        grid-template-columns: 1.2em auto 120px 24px
+        grid-gap: .3em
         align-items: center
         width: 90%
         max-width: 800px
-        height: 65px
         margin-bottom: 10px
         padding: 0.5em
         border: 1px solid transparent
@@ -77,6 +79,13 @@ label>h1
         box-shadow: 5px 5px 12px rgb(0 0 0 / 8%)
         color: black
         transition: all .5s ease-out
+
+        &_no-timetag
+            &>*
+                grid-row: none
+
+            @media (max-width: 425px)
+                grid-template-rows: 1fr !important
 
         &:hover
             box-shadow: 5px 5px 12px rgb(0 0 0 / 16%)
@@ -101,10 +110,11 @@ label>h1
             color: #485cff
 
         &__btn-delete
+            grid-column: 4/5
+            grid-row: 2/4
             display: flex
             justify-content: center
             align-content: center
-            grid-column: 4/5
             margin-left: auto
             padding: 5px
             border: 1px solid transparent
@@ -140,6 +150,9 @@ label>h1
         &>checkbox
             width: 1.1em
             height: 1.1em
+
+        @media ( max-width:  425px)
+            grid-template-rows: auto auto
 
     &__button-section
         max-width: 400px
@@ -217,10 +230,14 @@ label>h1
         width: 60%
 
 .checkbox
+    grid-column: 1/2
+    grid-row: 2/4
     width: 1.2em
     height: 1.2em
-    margin-right: 10px
     cursor: pointer
+
+    @media ( min-width: $mobile-L )
+        grid-row: 1/4
 
 .todo-editor
     height: 95vh
@@ -297,9 +314,6 @@ label>h1
 .textarea
     height: 100%
 
-.tag
-    margin-left: 10px
-
 .sort-menu
     display: flex
     align-items: center
@@ -323,3 +337,27 @@ label>h1
 
         &:focus
             outline: none
+
+.link
+    min-width: 0
+    grid-column: 2/4
+
+    &>*
+        max-width: 100%
+        overflow-x: hidden
+
+    &:hover
+        &>*
+            color: darken(#0075ff, 20%)
+
+    @media ( min-width: $mobile-L )
+        grid-column: 2/3
+        grid-row: 2/3
+
+.data-block__time-tag
+    grid-column: 1/5
+    grid-row: 1/2
+
+    @media ( min-width: $mobile-L )
+        grid-column: 3/4
+        grid-row: 1/4
