--- a/client/src/styles/index.sass
+++ b/client/src/styles/index.sass
@@ -1,12 +1,8 @@
-$mainColor: #9ede73
-$secondColor: #f7ea00
-$thirdColor: #e48900
-$accentColor: #be0000
-
-$btn-delete-color: #cc0f35
+$main-color: #0075ff
 $main-gradient: linear-gradient(to right, #0acffe 0%, #495aff 100%)
+$btn-delete-color: #cc0f35
 
-$mobile-L: 425px
+$mobile-L: 426px
 
 @font-face
     font-family: "Montserrat"
@@ -42,10 +38,10 @@ label>h1
 
 .wrapper
     box-sizing: border-box
-    width: 80%
+    width: 100%
     max-width: 1400px
     margin: 0 auto
-    padding-top: 5px
+    padding: .5em
 
     &_loading
         display: flex
@@ -53,16 +49,16 @@ label>h1
         align-items: center
         height: 100vh
 
-    @media (max-width: 600px)
-        width: 100%
-        padding: 3px
+    @media (min-width: $mobile-L)
+        width: 80%
+        padding: .2em
 
 .todo-list
     display: flex
     flex-direction: column
     align-items: center
     width: 100%
-    height: 90vh
+    height: calc(100vh - 55px)
     overflow-y: scroll
 
     &__item
@@ -72,7 +68,7 @@ label>h1
         align-items: center
         width: 90%
         max-width: 800px
-        margin-bottom: 10px
+        margin-bottom: .9em
         padding: 0.5em
         border: 1px solid transparent
         border-radius: 20px
@@ -84,7 +80,7 @@ label>h1
             &>*
                 grid-row: none
 
-            @media (max-width: 425px)
+            @media (max-width: $mobile-L)
                 grid-template-rows: 1fr !important
 
         &:hover
@@ -98,7 +94,7 @@ label>h1
                 fill: $btn-delete-color
 
         &__title
-            color: #0075ff
+            color: $main-color
             font: 500 1.5rem "Montserrat"
 
         &__text
@@ -116,20 +112,20 @@ label>h1
             justify-content: center
             align-content: center
             margin-left: auto
-            padding: 5px
+            padding: .3em
             border: 1px solid transparent
             border-radius: 5px
             background-color: #fff
             cursor: pointer
             transition: all .5s ease-out
 
-            @media (max-width: 425px)
+            @media (max-width: $mobile-L)
                 border: 1px solid $btn-delete-color
 
             &__svg
                 fill: transparent
 
-                @media (max-width: 425px)
+                @media (max-width: $mobile-L)
                     fill: $btn-delete-color
 
             &:hover
@@ -138,12 +134,6 @@ label>h1
                 .todo-list__item__btn-delete__svg
                     fill: #fff
 
-        &__container:hover .todo-list__item__title
-            color: darken(#0075ff, 15%)
-
-        &__container:hover .todo-list__item__text
-            color: darken(#595959, 15%)
-
         &__loader
             margin-left: auto
 
@@ -151,15 +141,15 @@ label>h1
             width: 1.1em
             height: 1.1em
 
-        @media ( max-width:  425px)
+        @media ( max-width: $mobile-L)
             grid-template-rows: auto auto
 
     &__button-section
-        max-width: 400px
-        margin: 0 auto
         display: grid
         grid-template-columns: 1fr 3fr 1fr
         align-items: center
+        max-width: 400px
+        margin: 0 auto
 
         &__button
             display: flex
@@ -204,9 +194,9 @@ label>h1
     display: block
     height: 35px
     width: 30%
-    max-width: 500px
-    margin: 5px auto
-    padding: 7px
+    max-width: 200px
+    margin: 0 auto
+    padding: .3em
     border: none
     border-radius: 20px
     box-shadow: 0 0 20px 0px #495aff94
@@ -216,14 +206,13 @@ label>h1
     color: white
     text-decoration: none
     caret-color: transparent
-    transition: background-image 0.5s
 
     &:hover
         cursor: pointer
         box-shadow: 0 0 20px 0px #495affd1
         color: white
 
-    @media ( max-width: 425px )
+    @media ( max-width: $mobile-L )
         width: 80%
         padding: 5px
     @media ( min-width: 768px )
@@ -240,7 +229,7 @@ label>h1
         grid-row: 1/4
 
 .todo-editor
-    height: 95vh
+    height: calc(100vh - 10px)
 
     @media (min-width: 600px)
         width: 80%
@@ -257,59 +246,11 @@ label>h1
         width: 100%
         outline: none
 
-    &__input
-        width: 80%
-        height: 50%
-        border: 1px solid #bcbcbc
-        border-radius: 5px
-        font: 300 1rem "Montserrat"
-
-        @media (max-width: 425px)
-            width: 95%
-
-        @media (min-width: 768px)
-            padding: 5px
-
-        &:focus
-            border: 1px solid #23a1ff
-            outline: none
-
-        &_error
-            border: 1px solid red
-
-    &__title-container
-        display: flex
-        flex-direction: column
-        align-items: center
-        width: 100%
-        height: 100%
-
-        &__error-field
-            color: transparent
-            transition: all 1.6s cubic-bezier(0.65, 0, 0.35, 1)
-
-            &_active
-                color: red
-
-    &__text
-        height: 100%
-        margin: 0 auto
-        resize: vertical
-
-    &__input-container
-        display: flex
-        flex-direction: column
-        align-items: center
-        width: 100%
-
-        & > *
-            margin-bottom: 10px
-
 .svg-icon
     box-sizing: content-box
-    width: 16px
-    height: 16px
-    padding-right: 5px
+    width: 1rem
+    height: 1rem
+    padding-right: .2rem
 
 .textarea
     height: 100%
