Added initial styles for auth page.

--- a/client/src/styles/index.sass
+++ b/client/src/styles/index.sass
@@ -302,3 +302,12 @@ label>h1
     @media ( min-width: $mobile-L )
         grid-column: 3/4
         grid-row: 1/4
+
+.auth__form
+    display: flex
+    flex-direction: column
+    justify-content: center
+    align-items: center
+
+    &>*
+        margin-bottom: 0.5em
