Added loading and error messages for auth page.

--- a/client/src/styles/index.sass
+++ b/client/src/styles/index.sass
@@ -311,3 +311,9 @@ label>h1
 
     &>*
         margin-bottom: 0.5em
+
+.input__error-field
+    &_active
+        color: #f14668
+    &_disabled
+        color: transparent
