--- a/client/src/styles/index.sass
+++ b/client/src/styles/index.sass
@@ -165,6 +165,10 @@ label>h1
             grid-template-rows: auto auto
 
     &__button-section
+        position: fixed
+        bottom: .2em
+        left: 0
+        right: 0
         display: grid
         grid-template-columns: 1fr 3fr 1fr
         align-items: center
@@ -355,6 +359,10 @@ p.help.disabled
 .icon
     @media ( min-width: $mobile )
         margin: 0 auto !important
+
+.navbar-menu
+    max-width: 1400px
+    margin: 0 auto
 
 .navbar-item
     color: white
